# mcp-notebooks

./: README.md  dockerfile  pyproject.toml
mcp_notebooks/: server.py
mcp_notebooks/app/: api.py
mcp_notebooks/core/: exceptions.py  kernel.py  manager.py  util.py
src/mcp_notebooks/: mcp.py  mcp_server.py  server.py
src/mcp_notebooks/app/: api.py  exception_handler.py
src/mcp_notebooks/core/: kernel.py  manager.py
src/mcp_notebooks/models/: schema.py
tests/: test_api.py
