[project]
name = "mcp-notebooks"
version = "0.1.0"
description = ""
authors = [
    {name = "Ian Weber",email = "ian@spatialedge.co.za"}
]
readme = "README.md"
requires-python = "<4.0,>=3.10"
dependencies = [
    "fastmcp>=2.3.3",
    "jupyterlab>=4.4.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]